syntax="proto3";
package payments;

service Payments {
  rpc SendPayment(PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string from_addr = 1;
  string to_addr = 2;
  int32 amount = 3;
}

message PaymentResponse {
  bool successful = 1;
  string message = 2;
}